updating - work with Sebas

--- a/notebooks/qqua_nb.ipynb
+++ b/notebooks/qqua_nb.ipynb
@@ -9698,15 +9698,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 136,
    "id": "2e61314b-5a33-4ead-b4d1-2b7bc494328f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-03-20T00:31:20.395659Z",
-     "iopub.status.busy": "2023-03-20T00:31:20.395159Z",
-     "iopub.status.idle": "2023-03-20T00:31:20.474937Z",
-     "shell.execute_reply": "2023-03-20T00:31:20.473805Z",
-     "shell.execute_reply.started": "2023-03-20T00:31:20.395622Z"
+     "iopub.execute_input": "2023-03-20T00:49:30.650375Z",
+     "iopub.status.busy": "2023-03-20T00:49:30.649944Z",
+     "iopub.status.idle": "2023-03-20T00:49:30.732554Z",
+     "shell.execute_reply": "2023-03-20T00:49:30.731542Z",
+     "shell.execute_reply.started": "2023-03-20T00:49:30.650342Z"
     },
     "tags": []
    },
@@ -9734,9 +9734,72 @@
     "    \n",
     "    dfx = models[model]['df']\n",
     "    \n",
+    "    dfres[model + '_pred_prob'] = dfx[model + '_pred_prob']\n",
+    "    \n",
     "    # dfres[model + '_pred'] = (dfx[model + '_pred_prob'] > dfprofit_max.loc[dfprofit_max.index == model, 'thd'].tolist()[0])*1\n",
-    "    dfres[model + '_pred'] = (dfx[model + '_pred_prob'] > 0.0235*2)*1 ## Setting threshold as twice the minimum required"
+    "    dfres[model + '_pred'] = (dfx[model + '_pred_prob'] > 0.0235*2)*1 ## Setting threshold as twice the minimum required\n",
+    "    # dfres[model + '_pred'] = (dfx[model + '_pred_prob'] > 0.*2)*1 ## Setting threshold as twice the minimum required"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "880cdce7-3380-4aa4-92c6-f093fe283007",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-03-20T00:49:30.849381Z",
+     "iopub.status.busy": "2023-03-20T00:49:30.848953Z",
+     "iopub.status.idle": "2023-03-20T00:49:30.923941Z",
+     "shell.execute_reply": "2023-03-20T00:49:30.922823Z",
+     "shell.execute_reply.started": "2023-03-20T00:49:30.849343Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mr1 = dfres['m2_pred'] == 1\n",
+    "\n",
+    "prob_x = dfres.loc[mr1, ['m2_pred_prob']].mean().tolist()[0]\n",
+    "cust_x = dfres.loc[:, ['m2_pred']].sum().tolist()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "e99f7ae2-7ac3-49af-a7f8-9d226a077bd2",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-03-20T00:49:31.018493Z",
+     "iopub.status.busy": "2023-03-20T00:49:31.018077Z",
+     "iopub.status.idle": "2023-03-20T00:49:31.088346Z",
+     "shell.execute_reply": "2023-03-20T00:49:31.087300Z",
+     "shell.execute_reply.started": "2023-03-20T00:49:31.018461Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11815.75806933155"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cust_x*(60*prob_x/2 - 1.41)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a239bd08-47fb-458e-bd3a-893ceda6d8c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
